# adr-agent

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
prompts/: default-plan.md  environment-strategy-plan.md
scripts/: create-env.sh  restore.sh
src/: main.py
src/plugins/output/: plugin.py
src/plugins/pii_detection/: plugin.py
src/plugins/well_architected/: plugin.py  well_architected.index  well_architected_texts.npy
